# only-code

./: .clangd  .gitignore  CMakeLists.txt  README.md  pyproject.toml
data-structures/: pyproject.toml  segtree.c  setup.py
data-structures/csegtree/: __init__.py  segtree.c  segtree.h  segtree_iterator.h
data-structures/data_structures/csegtree/: segtree.c  segtree.h  segtree_iterator.h
data-structures/impl/: cpp_segtree.cpp  py_segtree.py
data-structures/segtree/: bindings.cpp  segtree.cpp  segtree.h  segtree.hpp
data-structures/tests/: df_concat.py  stress.py
data_structures/point2d/: bindings.cpp  chull.cpp  point2d.hpp
segtree/: segtree.c  segtree.h  segtree_iterator.h  setup.py
tests/: df_concat.py  segtree_stress.py  stress_chull.py
